components/select/src/styles/style.scss
// Copyright (c) 2024 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// Import Auro tokens
@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";

@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
@import '@aurodesignsystem/webcorestylesheets/src/core';
@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';

/* stylelint-disable selector-class-pattern */

[slot='trigger'] {
  width: 100%;
  padding: 0;
  border: 0;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  text-align: left;

  .nestingSpacer {
    display: none;
  }

  #placeholder {
    &.hidden {
      position: absolute;
      z-index: -1;
      opacity: 0;
      pointer-events: none;
    }
  }
} 

:host {
  .nativeSelectWrapper {
    position: absolute;
    overflow: hidden;
    width: 1px;
    height: 1px;
    padding: 0;
    border: 0;
    margin: -1px;
    clip: rect(0, 0, 0, 0);
    opacity: 0.01;
  }

  [auro-dropdown] {
    position: relative;

    &::part(trigger) {
      max-height: var(--ds-size-300, $ds-size-300);
    }

    &::part(popover) {
      max-width: -webkit-fill-available;
      overflow-y: scroll;
    }
  }
}

:host([disabled]) {
  * {
    user-select: none;
  }
}

.outerWrapper {
  position: relative;
}

auro-menuoption {
  padding: 0;
  pointer-events: none;
}

.menuWrapper {
  padding: var(--ds-size-50, $ds-size-50) 0;
}

// Multiselect styles
:host([multiselect]) {
  [slot="trigger"] {
    display: flex;
  }

  auro-menuoption {
    &:not(:first-child) {
      margin-left: var(--ds-size-100);
    }
  }
}

#slotHolder{
  display: none;
}

